--- a/css/styleOG.css
+++ b/css/styleOG.css
@@ -19,12 +19,14 @@ header{
     width: 100%;
     height: 12rem;
     background-color: #0D011Aff;
-    background-image: url(../assets/Images/Ascisco\ Gaming\ Store.png);
+    background-image: url("../assets/Images/AsciscoGamingStore.png");
     background-size: 20rem;
     background-repeat: no-repeat;
     background-position: center;
     background-position: top;
     position: sticky;
+    margin: 0 auto;
+    padding: 1rem
 }
 body{
     background-image: url(../assets/Images/Background.jpg);
@@ -144,11 +146,13 @@ section .intro{
     width: 100%;
     height: 50px;
     margin-top: 1rem;
+    margin-bottom: 0.5rem;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     background-color: #0D011Aff ;
+    
 }
 .trabajo{
     font-family: "Audiowide", sans-serif;
@@ -471,11 +475,11 @@ div .flecha{
         width: 100%;
         height: 0;
         overflow: hidden;
-    }
-    nav .menu-ul{
-        flex-direction: column;
-        align-items: center;
-        padding: 0.5rem 0;
+        .menu-ul{
+            flex-direction: column;
+            align-items: center;
+            padding: 0.5rem 0;
+        } 
     }   
     nav label{
         display: inline-flex;
