--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -62,9 +62,9 @@
     .instrucciones{
         font-size: 1.2rem ;
     }
-    .productos ul li a{
+    .productos-container .productos ul li a{
     
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     .wattprecio-container{
         flex-direction: column;
