--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,17 @@ header {
       list-style: none; }
       .productos-container .productos ul li a {
         font-family: "Audiowide", sans-serif;
-        font-size: 2rem;
+        font-size: 1.5rem;
         color: #0E466Bff; }
+
+div .introayuda {
+  font-family: "Audiowide", sans-serif;
+  font-size: 1.75rem;
+  background-color: #ffebcd7c;
+  color: #ffebcd;
+  text-align: center;
+  border-style: solid;
+  border-color: #000000; }
 
 .itemsgaleria {
   display: grid;
@@ -153,6 +162,8 @@ header {
   .itemsgaleria img {
     width: 50%;
     height: 50%;
+    border: #000000;
+    border-style: double;
     object-fit: cover; }
 
 .item1 {
@@ -294,14 +305,22 @@ header {
   width: 100%;
   gap: 1rem; }
   .partesgaleria div {
-    width: 25rem;
-    height: 25rem;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
     box-shadow: 7px 7px 7px #3A0D50ff; }
     .partesgaleria div img {
-      width: 60%;
-      height: 60%;
-      object-fit: contain; }
+      width: 80%;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      position: absolute;
+      margin-top: 90%; }
 
 .gal1 {
   grid-area: gal1; }
@@ -448,10 +467,6 @@ header {
     width: 25rem;
     height: 15rem; } }
 
-h2 {
-  font-family: "Audiowide", sans-serif;
-  color: #ffebcd; }
-
 /**meddiaqueries**/
 @media (max-width: 768px) {
   nav .menu {
@@ -508,8 +523,8 @@ h2 {
       object-fit: cover; }
   .instrucciones {
     font-size: 1.2rem; }
-  .productos ul li a {
-    font-size: 1.5rem; }
+  .productos-container .productos ul li a {
+    font-size: 1rem; }
   .wattprecio-container {
     flex-direction: column;
     align-items: center;
@@ -531,7 +546,7 @@ h2 {
       width: 50%;
       height: 50%;
       object-fit: cover; }
-  .productos li a {
-    font-size: 1rem; }
+  .productos-container .productos ul li a {
+    font-size: 0.75rem; }
   .instrucciones {
     font-size: 1rem; } }
