--- a/scss/layout/_armatupc.scss
+++ b/scss/layout/_armatupc.scss
@@ -77,14 +77,22 @@ $colorsombra: #3A0D50ff;
     width: 100%;
     gap: 1rem;
     div{
-        width: 25rem;
-        height: 25rem;
-        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-bottom: 100%;
         box-shadow: 7px 7px 7px $colorsombra;
         img{
-            width: 60%;
-            height: 60%;
-            object-fit:contain;
+            width: 80%; 
+            height: auto; 
+            max-width: 100%; 
+            max-height: 100%; 
+            object-fit: contain; 
+            position: absolute;
+            margin-top: 90%;
         }
     }
 }
