--- a/scss/layout/media/_media480.scss
+++ b/scss/layout/media/_media480.scss
@@ -20,9 +20,9 @@
         width: 50%;
         margin-right: 1rem;
     }
-    .productos li a{
+    .productos-container .productos ul li a{
     
-        font-size: 1rem;
+        font-size: 0.75rem;
     }
     .instrucciones{
         font-size: 1rem ;
